--- a/Tic-Tac-Toe/What's up on the field/task-info.yaml
+++ b/Tic-Tac-Toe/What's up on the field/task-info.yaml
@@ -218,6 +218,35 @@ files:
     if __name__ == '__main__':
         TicTacToeTest('tictactoe.tictactoe').run_tests()
   learner_created: false
+- name: tictactoe/tictactoe.py
+  visible: true
+  text: |
+    # write your code here
+    def print_border():
+        print('---------')
+
+
+    def print_lines(grid_string: str):
+        chars = list(grid_string)
+        for x in range(0, 3):
+            print_line(chars, x)
+
+
+    def print_line(grid_chars, line_number):
+        line = ''
+        line += '| '
+        for y in range(0, 3):
+            current_char = grid_chars[(3 * line_number) + y]
+            line += f"{current_char} "
+        line += '|'
+        print(line)
+
+
+    grid = input()
+    print_border()
+    print_lines(grid)
+    print_border()
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/73/stages/401/implement
-status: Unchecked
+status: Solved
 record: -1
