--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -9,3 +9,9 @@ content:
 - A lot of nested lists
 - Running average
 - Word list
+- Find the length
+- Good programmer
+- Print a sign
+- What day is it
+- mixedCase
+- Triangle
