--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -15,3 +15,9 @@ content:
 - What day is it
 - mixedCase
 - Triangle
+- Chaos
+- Visual poetry
+- English contractions
+- Heads or Tails
+- Lottery
+- Prime numbers
